# tweet-utils

./: Cargo.toml
data/: tweet.json
tweet-trajectories/: Cargo.toml
tweet-trajectories/src/: main.rs  model.rs
tweet-trajectories/src/algo/: curviness.rs  mod.rs  speed.rs  time.rs
tweet-trajectories/src/tweet/: mod.rs
twitter-user-movement/: Cargo.toml  training-config.example.json
twitter-user-movement/src/: main.rs  model.rs
twitter-user-movement/src/algo/: angle.rs  mod.rs  straightness.rs
twitter-user-movement/src/tweet/: datetime.rs  mod.rs
