[package]
name = "tweet-trajectories"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3.1", features = ["derive"] }
eyre = "0.6"
geo = "0.19"
geojson = { version = "0.22", features = ["geo-types"] }
geo-types = "0.7"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
