[package]
name = "twitter-user-movement"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3.1", features = ["derive"] }
eyre = "0.6"
geo = "0.19"
geojson = { version = "0.22", features = ["geo-types"] }
geo-types = "0.7"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
ordered-float = "2"
nalgebra = "0.30"
num-traits = "0.2"
uom = "0.32"
statrs = "0.15"
